[package]
name = "ttpkit-auth"
version = "0.2.0"
authors = ["Ondrej Perutka <perutka.ondrej@gmail.com>"]
edition = "2024"
readme = "README.md"
license = "MIT"
documentation = "https://docs.rs/ttpkit-auth/"
repository = "https://github.com/operutka/ttpkit"
description = """
Common HTTP authentication methods (Basic and Digest).
"""
keywords = ["authentication", "basic", "digest", "http", "ttpkit"]

[dependencies]
base64 = "0.22"
digest = "0.10"
md5 = "0.8"
rand = "0.9"
sha1 = "0.10"
sha2 = "0.10"
str-reader = "0.1"

[dependencies.ttpkit]
version = "0.1"
path = "../ttpkit"

[dependencies.ttpkit-utils]
version = "0.1"
path = "../ttpkit-utils"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
