[package]
name = "ttpkit-http"
version = "0.1.1"
authors = ["Ondrej Perutka <perutka.ondrej@gmail.com>"]
edition = "2024"
readme = "README.md"
license = "MIT"
documentation = "https://docs.rs/ttpkit-http/"
repository = "https://github.com/operutka/ttpkit"
description = """
Simple HTTP client and server implementation based on ttpkit.
"""
keywords = ["http", "ttpkit"]

[[example]]
name = "client"
required-features = ["client"]

[[example]]
name = "server"
required-features = ["server"]

[features]
default = []
server = ["dep:log", "dep:futures", "dep:tokio", "dep:trait-variant", "dep:ttpkit-url", "dep:ttpkit-utils"]
client = ["dep:futures", "dep:tokio", "dep:ttpkit-url", "dep:ttpkit-utils"]
tls-client = ["client", "openssl", "dep:tokio-openssl"]
ws = ["dep:base64", "dep:futures", "dep:rand", "dep:sha-1", "dep:tokio", "dep:ttpkit-utils"]

[dependencies]
bytes = "1"

[dependencies.base64]
version = "0.22"
optional = true

[dependencies.futures]
version = "0.3"
optional = true

[dependencies.log]
version = "0.4"
optional = true

[dependencies.openssl]
version = "0.10"
optional = true

[dependencies.rand]
version = "0.9"
optional = true

[dependencies.sha-1]
version = "0.10"
optional = true

[dependencies.tokio]
version = "1"
features = ["net", "rt", "time"]
optional = true

[dependencies.tokio-openssl]
version = "0.6"
optional = true

[dependencies.tokio-util]
version = "0.7"
features = ["codec"]

[dependencies.trait-variant]
version = "0.1"
optional = true

[dependencies.ttpkit]
version = "0.1"
path = "../ttpkit"
features = ["tokio-codec"]

[dependencies.ttpkit-url]
version = "0.1"
path = "../ttpkit-url"
optional = true

[dependencies.ttpkit-utils]
version = "0.1"
path = "../ttpkit-utils"
features = ["io"]
optional = true

[dev-dependencies.tokio]
version = "1"
features = ["full"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
