[package]
name = "ttpkit-utils"
version = "0.1.0"
authors = ["Ondrej Perutka <perutka.ondrej@gmail.com>"]
edition = "2024"
readme = "README.md"
license = "MIT"
documentation = "https://docs.rs/ttpkit-utils/"
repository = "https://github.com/operutka/ttpkit"
description = """
Various utilities for ttpkit.
"""
keywords = ["ttpkit"]

[features]
default = []
io = ["dep:futures", "dep:pin-project-lite", "dep:tokio"]

[dependencies]
atoi = "2"
bytes = "1"
itoa = "1"

[dependencies.futures]
version = "0.3"
optional = true

[dependencies.pin-project-lite]
version = "0.2"
optional = true

[dependencies.tokio]
version = "1"
features = ["io-util", "time"]
optional = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
