[package]
name = "ttpkit"
version = "0.1.0"
edition = "2024"

[features]
default = []
tokio-codec = ["tokio-util/codec"]

[dependencies]
bytes = "1"
futures = "0.3"

[dependencies.tokio-util]
version = "0.7"
default-features = false
optional = true

[dependencies.ttpkit-utils]
path = "../ttpkit-utils"
