[package]
name = "ttpkit"
version = "0.1.0"
authors = ["Ondrej Perutka <perutka.ondrej@gmail.com>"]
edition = "2024"
readme = "README.md"
license = "MIT"
documentation = "https://docs.rs/ttpkit/"
repository = "https://github.com/operutka/ttpkit"
description = """
Generic types for implementing protocols like HTTP, RTSP, SIP, etc.
"""
keywords = ["http", "network", "protocol", "rtsp", "sip", "ttpkit"]

[features]
default = []
tokio-codec = ["tokio-util/codec"]

[dependencies]
bytes = "1"
futures = "0.3"
pin-project-lite = "0.2"

[dependencies.tokio-util]
version = "0.7"
default-features = false
optional = true

[dependencies.ttpkit-utils]
version = "0.1"
path = "../ttpkit-utils"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
